--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tensorflow/tfjs-backend-wasm": "^1.5.2-alpha1",
     "@tensorflow/tfjs-converter": "^1.5.2",
     "@tensorflow/tfjs-core": "^1.5.2",
+    "@tensorflow/tfjs-node": "^1.5.2",
     "core-js": "3"
   },
   "scripts": {
